--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -150,18 +150,18 @@
 .ppt-taxo-nav {
   border: 1px solid #00416a !important;
   background: white !important;
-  height: calc(100vh - 136px);
+  height: calc(100vh - 111px);
   width: 212px;
   padding: 10px;
 }
 
 .ppt-div-graph {
-  height: calc(100vh - 136px) !important;
+  height: calc(100vh - 111px) !important;
   width: calc(100% - 212px);
 }
 
 .ppt-container-graph {
-  height: calc(100vh - 136px) !important;
+  height: calc(100vh - 111px) !important;
   width: 100%;
   min-width: 600px;
   flex-wrap: nowrap !important;
@@ -170,7 +170,7 @@
   margin: 0px !important;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: white !important;
 }
 .ppt-glink {
   stroke-width: 4px;
