--- a/src/components/sidenavContainer/SidenavContainer.scss
+++ b/src/components/sidenavContainer/SidenavContainer.scss
@@ -149,7 +149,7 @@ hr {
   backdrop-filter: blur(2px);
   border-radius: 0.5rem;
   padding-bottom: 5px;
-  padding-right: 0px;
+  padding: 0px;
 }
 
 .notopmargin {
@@ -170,7 +170,8 @@ hr {
   line-break: anywhere;
 }
 
-.filterform-container > form {
+.filterform-container > form,
+.filterform-container.form {
   background-color: #40404099;
   padding: 20px;
   border-radius: 0.25rem;
